# Line-Detection-From-Grayscale-Image

./: CMakeLists.txt  Detecția Liniilor din Imagini Grayscale.docx  main.cpp
src/: project.cpp  project.h
